--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -36,6 +36,11 @@
   color: white;
   text-align: center;
 }
+@keyframes gradientFlow {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
 
 
 
