--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -42,5 +42,18 @@
   100% { background-position: 0% 50%; }
 }
 
+* {
+  user-select: none;
+  outline: none !important;
+  cursor: default;
+}
 
+.goog-te-banner-frame.skiptranslate,
+.goog-logo-link,
+.goog-te-gadget {
+  display: none !important;
+}
 
+body {
+  top: 0 !important;
+}
